[package]
name = "pallet-balances"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet to manage balances"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
frame-benchmarking = { version = "2.0.0", default-features = false, path = "../benchmarking", optional = true }
frame-support = { version = "2.0.0", default-features = false, path = "../support" }
frame-system = { version = "2.0.0", default-features = false, path = "../system" }
pallet-sudo = { version = "2.0.0", path = "../../frame/sudo", optional = true }
sp-keyring = { version = "2.0.0", path = "../../primitives/keyring", optional = true }
substrate-test-runner = { version = "0.8.0", path = "../../test-utils/substrate-test-runner", optional = true }
num-traits = { version = "0.2.14", optional = true }

[dev-dependencies]
sp-io = { version = "2.0.0", path = "../../primitives/io" }
sp-core = { version = "2.0.0", path = "../../primitives/core" }
pallet-transaction-payment = { version = "2.0.0", path = "../transaction-payment" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
tests = [
	"pallet-sudo",
	"sp-keyring",
	"substrate-test-runner",
	"num-traits"
]
runtime-benchmarks = ["frame-benchmarking"]
